# todo_list_rust

./: Cargo.toml  plan.txt  todotests.rs
database/: data.db  test_data.db
examples/: exaple_table.rs  input.rs  tabs.rs
src/: app_state.rs  appstate.rs  database.rs  lib.rs  main.rs  render.rs  render_authenitcation.rs  todo.rs  todo_item.rs  todotests.rs  user.rs  user_authentication.rs
tests/: test_database.rs  test_todo.rs  test_todo_item.rs  test_user.rs
