[package]
name = "todo_list_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
crossterm = "0.27.0"
rand = "0.8.5"
serde = "1.0.192"
serde_json = "1.0.108"
termion = "2.0.3"
thiserror = "1.0.50"
tui = "0.19.0"
unicode-width = "0.1.11"
